feat: add bg images and text information

--- a/index.html
+++ b/index.html
@@ -22,8 +22,52 @@
     </header>
 
     <main>
-      
+      <div class="player">
+        <p></p>
+      </div>
+      <h1>Орнитотерапия</h1>
+      <p>Ежедневно человек подвергаемся воздействию различных звуков. Все они действуют по-разному. 
+        О влиянии музыки на живой мир говорят давно. Но музыка – это не первые звуки, которые слышали 
+        наши предки. Сначала были птичьи трели. Уже тогда человек отметил, что звук этот приятен, 
+        и пытался научиться его имитировать. Так появились первые музыкальные инструменты.
+        Время шло, но люди продолжали изучать воздействие музыки на живые организмы. А что же птицы? 
+        Их тоже исследуют. Этим занимаются орнитологи. Они различают пение самки и самца, безошибочно 
+        определяют возраст, знают чем отличается песня одного вида в разное время года. Для пернатых пение 
+        – это средство коммуникации, птичий язык. И специалисты по птицам научились его понимать. А ещё они 
+        заметили, что пение птиц имеет положительное влияние на человека. И появилась целая наука, использующая 
+        для лечения пернатых – орнитотерапия.</p>
+      <p>Какие птицы вам помогут, и при каких заболеваниях?</p>
+      <h3>Соловей</h3>
+      <p>При депрессии, головных болях, слабости и хронической усталости помогут его песни. Они довольно сложные, 
+        переливчатые, сочетают перепады мягких и резких звуков. Эта птица поёт мастерски! Ведь не зря соловей – 
+        герой многих песен и сказок. Для тех, кто хочет услышать соловья в природе, придётся вставать очень рано: 
+        он поёт на рассвете.</p>
+        <h3> Дрозд</h3> 
+        <p>У нас встречается несколько видов дроздов. Наиболее исследован дрозд черный и его влияние на излечение 
+          болезней сердца, тахикардии, хронической гипертонии. Птица встречается повсеместно, селиться поближе к 
+          жилищам, поэтому встретить её не составит труда.</p>
+        <h3>Малиновка (зарянка)</h3> 
+        <p>Отмечено благотворное влияние звуковых вибраций на страдающих бессонницей. Замечено, что малиновка 
+          и её песни помогают снимать боли в суставах, при ПМС, головные боли, спазмы в желудке, печени, лечат 
+          болезни сердца. Её песня легкоузнаваемая, она оптимистична и начинается с характерного скрипа. Зарянка 
+          – первая весенняя птица, она поёт рано утром. Можно услышать её и перед заходом солнца.</p>
+        <h3>Жаворонок</h3> 
+        <p>Поможет в лечении бронхитов, трахеитов, нормализирует кровяное давление. Эта птица начинает петь в апреле. 
+          Есть полевой жаворонок и лесной. Их отличает непрерывное льющееся пение.</p>
+        <h3>Славка</h3> 
+        <p>Задорные песни этой маленькой птички повышают общий тонус. Её пение прекрасно. Поэтому славка иногда 
+          содержится в клетках.</p>
+        <h3>О проекте</h3>
+        <p>Подбором лечебных мелодий занимаются специалисты по биоакустике. Они составляют целые композиции из 
+          записей разных птиц в соответствии с диагнозом. Орнитотерапия – это приятное лечение, которое даёт хороший 
+          терапевтический эффект. Многие уже убедились в этом.
+        </p>
+        <p>Расслабьтесь, закройте глаза и прислушайтесь к звукам живой природы, и буквально через несколько минут 
+          вы почувствуете облегчение, все ваши повседневные проблемы отойдут на задний план, а настроение значительно 
+          улучшится. Как приятно холодными зимними вечерами услышать пение птиц и почувствовать маленький кусочек ЛЕТА!
+        </p>
     </main>
+
     <footer class="footer">
       <div class="footer-item">
         <a class="logo" href="https://github.com/obraztsov84"><img src="img/Logos/github.svg" width ="50" height="50" alt="github-logo"/></a>
