feat: add js script file without actual script

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Звуки природы</title>
 </head>
 <body>
   <div class="container">
     <header class="header">
       <nav>
         <ul class="navbar">
-          <li class="navbar-item"><a class="navbar-link" href="#">соловей</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#">зарянка</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#">жаворонок</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#">славка</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#">дрозд</a></li>
+          <li class="navbar-item" data-song="0"><a class="navbar-link" href="#" data-song="0">соловей</a></li>
+          <li class="navbar-item" data-song="1"><a class="navbar-link" href="#" data-song="1">зарянка</a></li>
+          <li class="navbar-item" data-song="2"><a class="navbar-link" href="#" data-song="2">жаворонок</a></li>
+          <li class="navbar-item" data-song="3"><a class="navbar-link" href="#" data-song="3">славка</a></li>
+          <li class="navbar-item" data-song="4"><a class="navbar-link" href="#" data-song="4">дрозд</a></li>
+          <li class="navbar-item" data-song="5"><a class="navbar-link" href="#" data-song="5">звуки леса</a></li>
         </ul>
       </nav>
     </header>
@@ -78,5 +79,6 @@
       </div>
     </footer>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
