feat: add some function

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <header class="header">
       <nav>
         <ul class="navbar">
-          <li class="navbar-item" data-song="0"><a class="navbar-link" href="#" data-song="0">соловей</a></li>
-          <li class="navbar-item" data-song="1"><a class="navbar-link" href="#" data-song="1">зарянка</a></li>
-          <li class="navbar-item" data-song="2"><a class="navbar-link" href="#" data-song="2">жаворонок</a></li>
-          <li class="navbar-item" data-song="3"><a class="navbar-link" href="#" data-song="3">славка</a></li>
-          <li class="navbar-item" data-song="4"><a class="navbar-link" href="#" data-song="4">дрозд</a></li>
-          <li class="navbar-item" data-song="5"><a class="navbar-link" href="#" data-song="5">звуки леса</a></li>
+          <li class="navbar-item active" data-song="solovey"><a class="navbar-link" href="#" data-song="solovey">соловей</a></li>
+          <li class="navbar-item" data-song="zarynka"><a class="navbar-link" href="#" data-song="zarynka">зарянка</a></li>
+          <li class="navbar-item" data-song="javoronok"><a class="navbar-link" href="#" data-song="javoronok">жаворонок</a></li>
+          <li class="navbar-item" data-song="slavka"><a class="navbar-link" href="#" data-song="slavka">славка</a></li>
+          <li class="navbar-item" data-song="drozd"><a class="navbar-link" href="#" data-song="drozd">дрозд</a></li>
+          <li class="navbar-item" data-song="forest"><a class="navbar-link" href="#" data-song="forest">звуки леса</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <div class="player">
-        <p></p>
+        <img class="play-btn" src="img/svg/play.svg" alt="pause-play button">
       </div>
       <h1>Орнитотерапия</h1>
       <p>Ежедневно человек подвергаемся воздействию различных звуков. Все они действуют по-разному. 
@@ -71,11 +71,11 @@
 
     <footer class="footer">
       <div class="footer-item">
-        <a class="logo" href="https://github.com/obraztsov84"><img src="img/Logos/github.svg" width ="50" height="50" alt="github-logo"/></a>
+        <a class="logo" href="https://github.com/obraztsov84"><img src="./img/Logos/github.svg" width ="50" height="50" alt="github-logo"/></a>
       </div>
       <div class="footer-item"><p class="footer-date">2022</p></div>
       <div class="footer-item">
-        <a class="logo" href="https://rs.school/js/"><img  src="img/Logos/rsschool.svg" height="50" alt="rsschool-logo"/></a>
+        <a class="logo" href="https://rs.school/js/"><img  src="./img/Logos/rsschool.svg" height="50" alt="rsschool-logo"/></a>
       </div>
     </footer>
   </div>
