feat: add moho song

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <header class="header">
       <nav>
         <ul class="navbar">
-          <li class="navbar-item active" data-song="solovey"><a class="navbar-link" href="#" data-song="solovey">соловей</a></li>
-          <li class="navbar-item" data-song="zarynka"><a class="navbar-link" href="#" data-song="zarynka">зарянка</a></li>
-          <li class="navbar-item" data-song="javoronok"><a class="navbar-link" href="#" data-song="javoronok">жаворонок</a></li>
-          <li class="navbar-item" data-song="slavka"><a class="navbar-link" href="#" data-song="slavka">славка</a></li>
-          <li class="navbar-item" data-song="drozd"><a class="navbar-link" href="#" data-song="drozd">дрозд</a></li>
-          <li class="navbar-item" data-song="forest"><a class="navbar-link" href="#" data-song="forest">звуки леса</a></li>
+          <li class="navbar-item active" data-song="moho"><a class="navbar-link" href="#">мохо</a></li>
+          <li class="navbar-item " data-song="solovey"><a class="navbar-link" href="#">соловей</a></li>
+          <li class="navbar-item" data-song="zarynka"><a class="navbar-link" href="#">зарянка</a></li>
+          <li class="navbar-item" data-song="javoronok"><a class="navbar-link" href="#">жаворонок</a></li>
+          <li class="navbar-item" data-song="slavka"><a class="navbar-link" href="#">славка</a></li>
+          <li class="navbar-item" data-song="drozd"><a class="navbar-link" href="#">дрозд</a></li>
+          <li class="navbar-item" data-song="forest"><a class="navbar-link" href="#">звуки леса</a></li>
         </ul>
       </nav>
     </header>
@@ -79,6 +80,7 @@
       </div>
     </footer>
   </div>
+  <audio class="audio" src="./audio/solovey.mp3"></audio>
   <script src="script.js"></script>
 </body>
 </html>
