feat: add some background images

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         заметили, что пение птиц имеет положительное влияние на человека. И появилась целая наука, использующая 
         для лечения пернатых – орнитотерапия.</p>
       <p>Какие птицы вам помогут, и при каких заболеваниях?</p>
+      <h3>Чешуегорлый мохо</h3>
+      <p>Если хочется погрустить. Можно услышать пение последнего мохо, которым он пытается привлечь самку, не зная, 
+        что она никогда не придёт, ведь он был последним представителем своего вида. Паузы между его пением нужны, 
+        чтобы пела самка, образовывая дуэт. Запись сделана в 1987 году, в том же году умер последний мохо.</p>
+
       <h3>Соловей</h3>
       <p>При депрессии, головных болях, слабости и хронической усталости помогут его песни. Они довольно сложные, 
         переливчатые, сочетают перепады мягких и резких звуков. Эта птица поёт мастерски! Ведь не зря соловей – 
@@ -80,7 +85,7 @@
       </div>
     </footer>
   </div>
-  <audio class="audio" src="./audio/solovey.mp3"></audio>
+  <audio class="audio" src="./audio/moho.mp3"></audio>
   <script src="script.js"></script>
 </body>
 </html>
