feat: add favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">
   <title>Звуки природы</title>
 </head>
 <body>
@@ -77,11 +78,11 @@
 
     <footer class="footer">
       <div class="footer-item">
-        <a class="logo" href="https://github.com/obraztsov84"><img src="./img/Logos/github.svg" width ="50" height="50" alt="github-logo"/></a>
+        <a class="logo" href="https://github.com/obraztsov84"><img src="./img/logos/github.svg" width ="50" height="50" alt="github-logo"/></a>
       </div>
       <div class="footer-item"><p class="footer-date">2022</p></div>
       <div class="footer-item">
-        <a class="logo" href="https://rs.school/js/"><img  src="./img/Logos/rsschool.svg" height="50" alt="rsschool-logo"/></a>
+        <a class="logo" href="https://rs.school/js/"><img  src="./img/logos/rsschool.svg" height="50" alt="rsschool-logo"/></a>
       </div>
     </footer>
   </div>
